Complete header part #1 ( Create scrollbar/CSS, fix issue Tippy)

--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -10,6 +10,12 @@
 .menu-popper {
     padding-bottom: 8px;
 }
+
+//tạo thanh cuộn
+.menu-body {
+    overflow-y: auto;
+}
+
 //menu item
 .menu-item {
     width: 100%;
@@ -30,6 +36,7 @@
 
 //header
 .header {
+    flex-shrink: 0;
     position: relative;
     height: 50px;
     margin-top: -8px;
